# cppWithOOP

./: .clang-format  CMakeLists.txt  main.cpp  readme.md
src/: FirstTask.cpp  FirstTask.hpp  SecondTask.cpp  SecondTask.hpp  Task.cpp  Task.hpp  fTask.cpp  fTask.hpp  fileTask.cpp  fileTask.hpp  includes.hpp  main.cpp  sTask.cpp  sTask.hpp
